@@ -19,7 +19,6 @@ src/common.py
 plugins/BlocklistImport/__init__.py
 plugins/BlocklistImport/ui.py
 plugins/BlocklistImport/text.py
-plugins/BlocklistImport/test.py
 plugins/BlocklistImport/peerguardian.py
 plugins/DesiredRatio/__init__.py
 plugins/TorrentPeers/__init__.py
